# dist_task_mngr_exercise

./: CMakeLists.txt  DistributedTaskManager.cpp  MockTask.cpp  Tester.cpp  Utils.cpp
include/: MockTask.hpp  Utils.hpp
